2010-04-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core.Execution/ProcessWrapper.cs:
	* MonoDevelop.Core.Execution/IProcessAsyncOperation.cs: Make
	  IProcessAsyncOperation IDisposable.

2010-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: fixed
	  cut&paste error.

2010-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Improved
	  dirty compiation unit merge.

2010-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Added
	  mergin of compilation units that contain errors.

2010-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs:
	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Optimized code completion database reading (saves up to ~20%
	  file size of the code completion db files).

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: used a LRU method
	  to prevent a memory leak of the return type cache.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Execution/ProcessService.cs: External
	  console processes are now wrapped by a
	  IProcessAsyncOperation interface, instead of a Process
	  instance. In this way it is possible to create external
	  consoles which are not directly bound to a process.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs:
	  Re-enabled return type sharing for code completion database.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs: Print type
	  name for constructors.
