@@ -1,3 +1,8 @@
+2010-04-28  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Dom/CompilationUnit.cs: Added special
+	  addusing method.
+
 2010-04-27  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Core.Execution/ProcessWrapper.cs:
